feat(scene): 重构节点操作并添加验证工具
重构节点操作功能，包括：
1. 将复制/粘贴节点合并为 duplicate-node 操作
2. 重命名 set-parent 为移动节点操作
3. 添加场景节点验证工具类 scene-node.ts
4. 提取组件属性处理工具到 component-props.ts
5. 为 create-node 和 set-parent 添加父节点存在性验证
6. 更新相关文档和命令行帮助信息

优化构建脚本，添加 npm link 步骤

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     ".": "./scripts/dist/lib/client.js"
   },
   "scripts": {
-    "build": "tsc -p cli/tsconfig.json && npm run copy-scripts",
+    "build": "tsc -p cli/tsconfig.json && npm run copy-scripts && npm link",
     "dev": "tsc -p cli/tsconfig.json --watch",
     "prepublishOnly": "npm run build",
     "copy-scripts": "node copy-scripts.mjs",
